complete main section

--- a/css/index.css
+++ b/css/index.css
@@ -81,3 +81,81 @@ nav {
     flex: 2 1 auto;
     height: 300px;
 }
+
+.info {
+    padding: 100px 0;
+    gap: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.info .info-heading {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+}
+
+.info .games {
+    display: flex;
+    justify-content: space-between;
+    width: 750px;
+}
+
+.info .games .game {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.info .games .game .thumbnail img {
+    height: 100px;
+    border: #3882f6 5px solid;
+}
+
+.quote {
+    background-color: #e5e7eb;
+    padding: 100px 500px;
+}
+
+.quote .text {
+    font-size: 36px;
+    color: #1f2937;
+}
+
+.quote .author {
+    padding-top: 20px;
+    text-align: right;
+    font-size: 24px;
+}
+
+.call-to-action {
+    margin: 100px 400px;
+    display: flex;
+    justify-content: space-between;
+    padding: 50px 100px;
+    background-color: #3882f6;
+    border-radius: 20px;
+    color: #e5e7eb;
+}
+
+.call-to-action .text .header {
+    font-size: 24px;
+    font-weight: 900;
+    margin-bottom: 5px;
+}
+
+.call-to-action .text .secondary {
+    font-size: 18px;
+}
+
+.call-to-action .signup {
+    color: #e5e7eb;
+    padding: 5px 50px;
+    font-size: 18px;
+    font-weight: 900;
+    background-color: transparent;
+    border: #e5e7eb 3px solid;
+    border-radius: 10px;
+}
