--- a/css/index.css
+++ b/css/index.css
@@ -159,3 +159,11 @@ nav {
     border: #e5e7eb 3px solid;
     border-radius: 10px;
 }
+
+footer {
+    background-color: #1f2937;
+    color: #f9faf8;
+    text-align: center;
+    padding: 50px 0;
+    font-size: 24px;
+}
